# cpd

./: .gitignore  README.md  pyproject.toml  setup.sh
cpd/: anomaly_detection.py  metrics.py  utils.py
data/: create_synthetic_data.py
notebooks/: benchmark_ruptures.ipynb  visualize_dataset.ipynb
